--- a/.gitignore
+++ b/.gitignore
@@ -171,4 +171,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Mac OS X
+*.DS_Store
+
 # End of https://www.toptal.com/developers/gitignore/api/django
